--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 		}
 	],
 	"require": {
-		"composer/composer"  : "dev-master as 1.0.0-alpha9"
+		"composer/composer"  : "dev-master#4d134ce8a2aacb9566fee8deb8c514248fd2a983"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.5"
