--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 	"issues": "http://github.com/mothership-ec/up/issues"
   },
   "require": {
-	"composer/composer": "dev-master#4d134ce8a2aacb9566fee8deb8c514248fd2a983"
+	"composer/composer": "dev-master"
   },
   "require-dev": {
 	"phpunit/phpunit": "~4.5"
