--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 	"issues": "http://github.com/mothership-ec/up/issues"
   },
   "require": {
-	"composer/composer": "dev-master"
+	"composer/composer": "dev-master as 1.0.0-alpha9"
   },
   "require-dev": {
 	"phpunit/phpunit": "~4.5"
