--- a/composer.json
+++ b/composer.json
@@ -2,31 +2,35 @@
   "name": "mothership-ec/up",
   "description": "Up! A composer library for self-updating projects",
   "keywords": [
-	"composer",
-	"update",
-	"installer"
+    "composer",
+    "update",
+    "installer"
   ],
   "homepage": "http://mothership.ec",
   "license": "GPL-3.0+",
   "authors": [
-	{
-	  "name": "The Mothership Development Team",
-	  "email": "dev@mothership.ec"
-	}
+    {
+      "name": "The Mothership Development Team",
+      "email": "dev@mothership.ec"
+    }
   ],
   "support": {
-	"issues": "http://github.com/mothership-ec/up/issues"
+    "issues": "http://github.com/mothership-ec/up/issues"
   },
   "require": {
-	"mothership-ec/composer": "~1.0"
+    "mothership-ec/composer": "~1.0"
   },
   "require-dev": {
-	"phpunit/phpunit": "~4.5"
+    "phpunit/phpunit": "~4.5"
   },
   "autoload": {
-	"psr-4": {
-	  "Mothership\\Up\\": "src",
-	  "Mothership\\Up\\Test\\": "tests"
-	}
+    "psr-4": {
+      "Mothership\\Up\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Mothership\\Up\\Test\\": "tests"
+    }
   }
 }
