--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
   },
   "require": {
     "php": ">=5.4",
-    "mothership-ec/composer": "~1.0"
+    "mothership-ec/composer": "dev-feature/update-composer as 1.0.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.5"
